@@ -9,7 +9,7 @@ public class TokenRefreshException extends RuntimeException {
 	private static final long serialVersionUID = 1L;
 
 	public TokenRefreshException(String token, String message) {
-		super(String.format("Failed for [%s]: %s", token, message));
+		super("Failed for [%s]: %s".formatted(token, message));
 	}
 
 }
